--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ logs/
 error.log
 
 # Carpetas de dependencias (ejemplo: Python, Node.js)
-web25011/
+web25017/
 privada/
 node_modules/
 venv/
@@ -22,7 +22,7 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
-
+*markdown
 # Archivos temporales
 *.tmp
 *.bak
